--- a/index.html
+++ b/index.html
@@ -9,6 +9,10 @@
   <title>Encriptador - Desencriptador</title>
 </head>
 <body>
+  
+  <div class="rectangle">
+    
+  </div>
 
   <script src="public/js/base.js"></script>
 </body>
