se agregó advertencia y sus estilos

--- a/index.html
+++ b/index.html
@@ -15,6 +15,11 @@
   
   <input class="ingreso-texto" type="text" name="ingreso_texto" placeholder="Ingrese el texto aquí">
 
+  <div class="info">
+    <img class="icono-exclamacion" src="public/img/exclamation-circle_icon.png" alt="icono de exclamación">
+    <p>Sólo letras mayúsculas y sin acentos.</p>
+  </div>
+
   <div class="rectangle">
     
   </div>
