se agregó los input con sus estilos y efectos

--- a/index.html
+++ b/index.html
@@ -20,6 +20,11 @@
     <p>Sólo letras mayúsculas y sin acentos.</p>
   </div>
 
+  <div class="btn-en-de">
+    <input class="btn-encriptar" type="button" value="Encriptar">
+    <input class="btn-desencriptar" type="button" value="Desencriptar">
+  </div>
+
   <div class="rectangle">
     
   </div>
