se agregó el muñeco y los mensajes con sus estilos

--- a/index.html
+++ b/index.html
@@ -26,7 +26,11 @@
   </div>
 
   <div class="rectangle">
-    
+    <img class="munheco" src="public/img/Munheco.svg" alt="munheco">
+    <div class="enunciado">
+      <p class="mensaje-primero">Ningún mensaje fue encontrado</p>
+      <p class="mensaje-segundo">Ingrese el texto que desees encriptar o desencriptar</p>
+    </div>
   </div>
 
   <script src="public/js/base.js"></script>
