se agregó el logo, se cambio input por textarea

--- a/index.html
+++ b/index.html
@@ -13,7 +13,9 @@
 </head>
 <body>
   
-  <input class="ingreso-texto" type="text" name="ingreso_texto" placeholder="Ingrese el texto aquí">
+  <img class="logo" src="public/img/Logo.svg" alt="logo de la web">
+
+  <textarea class="ingreso-texto" cols="30" rows="7" name="ingreso_texto" placeholder="Ingrese el texto aquí"></textarea>
 
   <div class="info">
     <img class="icono-exclamacion" src="public/img/exclamation-circle_icon.png" alt="icono de exclamación">
