--- a/index.html
+++ b/index.html
@@ -28,11 +28,14 @@
   </div>
 
   <div class="rectangle">
-    <img class="munheco" src="public/img/Munheco.svg" alt="munheco">
+    <div class="area-desencriptado">
+      <textarea class="txtarea-desencriptado" name="texto-desencriptado" cols="19" rows="13"></textarea>
+    </div>
+    <!-- <img class="munheco" src="public/img/Munheco.svg" alt="munheco">
     <div class="enunciado">
       <p class="mensaje-primero">Ningún mensaje fue encontrado</p>
       <p class="mensaje-segundo">Ingrese el texto que desees encriptar o desencriptar</p>
-    </div>
+    </div> -->
   </div>
 
   <script src="public/js/base.js"></script>
