se agregó el boton copiar con estilos

--- a/index.html
+++ b/index.html
@@ -30,6 +30,7 @@
   <div class="rectangle">
     <div class="area-desencriptado">
       <textarea class="txtarea-desencriptado" name="texto-desencriptado" cols="19" rows="13"></textarea>
+      <input class="btn-copiar" type="button" value="Copiar">
     </div>
     <!-- <img class="munheco" src="public/img/Munheco.svg" alt="munheco">
     <div class="enunciado">
