renombrando clase css y cambio de tipo en input

--- a/index.html
+++ b/index.html
@@ -28,8 +28,8 @@
       
       <article class="botones-encriptacion-desencriptacion">
         <div class="btn-en-de">
-          <input class="btn-encriptar" id="btn-encriptar" type="button" value="Encriptar">
-          <input class="btn-desencriptar" id="btn-desencriptar" type="button" value="Desencriptar">
+          <input class="btn-encriptar" id="btn-encriptar" type="submit" value="Encriptar">
+          <input class="btn-desencriptar" id="btn-desencriptar" type="submit" value="Desencriptar">
         </div>
       </article>
     </section>
@@ -37,12 +37,12 @@
     <section class="seccion__lateral">
       <article class="texto-desencriptado" id="texto-desencriptado">
         <div class="area-desencriptado">
-          <textarea class="txtarea-desencriptado" id="txtarea-desencriptado" name="texto-desencriptado" cols="19" rows="13"></textarea>
+          <textarea class="txtarea-mensaje" id="txtarea-mensaje" name="texto-mensaje" cols="19" rows="13"></textarea>
           <input class="btn-copiar" id="btn-copiar" type="button" value="Copiar">
         </div>
       </article>
       
-      <article class="mensajes-y-munheco">
+      <article class="mensajes-y-munheco" id="mensajes-y-munheco">
         <img class="munheco" src="public/img/Munheco.svg" alt="munheco">
         <div class="enunciado">
           <p class="mensaje-primero">Ningún mensaje fue encontrado</p>
